<resources>
    <string name="app_name">BookMe</string>
    <string name="action_settings">Settings</string>
    <string name="password">סיסמה</string>
    <string name="nameUser">שם משתמש</string>
    <string name="enter">הכנס</string>
    <string name="no_user_information">עוד אין לי פרטי משתמש</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_add">addActivity</string>
    <string name="firstName">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="phone">טלפון</string>
    <string name="address">כתובת</string>
    <string name="sign_up">הרשם</string>
    <string name="title_details">הכנסת פרטים:</string>
    <string name="display_all_book">הצגת כל הספרים</string>
    <string name="display_best_sell">הצגת הספרים הכי נמכרים</string>
    <string name="display_best_rec">הצגת הספרים הכי מומלצים</string>
    <string name="your_last_book">הספרים האחרונים שלך</string>
    <string name="title_activity_all_book">AllBookActivity</string>
    <string name="title_activity_invitation_book">InvitationBookActivity</string>
    <string name="title_activity_list_books">ListBooksActivity</string>
    <string name="title_activity_invitation">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="name_book">שם הספר</string>
    <string name="how_much">כמה עותקים?</string>
</resources>
