<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_add"
    tools:context="com.example.naamashlomtzion.bookme.addActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstName"
        android:ems="10"
        android:id="@+id/Text_firstName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:ems="10"
        android:id="@+id/Text_lastName"
        android:layout_below="@+id/Text_firstName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/TextPone"
        android:layout_below="@+id/Text_lastName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/Text_address"
        android:layout_below="@+id/TextPone"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Text_email"
        android:layout_below="@+id/Text_address"
        android:layout_alignRight="@+id/Text_address"
        android:layout_alignEnd="@+id/Text_address" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="מעוניין להיות ספק?"
        android:id="@+id/checkBox_wantProvider"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/Text_email"
        android:layout_alignLeft="@+id/Text_email"
        android:layout_alignStart="@+id/Text_email"/>sd

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/bt_sign_up"
        android:layout_below="@+id/checkBox_wantProvider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_details"
        android:id="@+id/textTitle"
        android:ems="30"
        android:layout_above="@+id/Text_firstName"
        android:layout_alignLeft="@+id/bt_sign_up"
        android:layout_alignStart="@+id/bt_sign_up"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:autoText="false"
        android:textSize="45sp" />
</RelativeLayout>
