<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="#06c5fa">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/bt_enter"
        android:layout_alignTop="@+id/bt_add"
        android:layout_toLeftOf="@+id/edit_password"
        android:layout_toStartOf="@+id/edit_password" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="אין לי פרטי משתמש"
        android:id="@+id/bt_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="74dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password"
        android:ems="10"
        android:id="@+id/edit_password"
        android:layout_marginBottom="57dp"
        android:layout_above="@+id/bt_enter"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nameUser"
        android:ems="10"
        android:id="@+id/edit_name"
        android:layout_above="@+id/edit_password"
        android:layout_alignLeft="@+id/edit_password"
        android:layout_alignStart="@+id/edit_password" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_logo"
        android:layout_above="@+id/edit_name"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignStart="@+id/edit_name"
        android:layout_marginBottom="48dp"
        android:layout_alignRight="@+id/edit_name"
        android:layout_alignEnd="@+id/edit_name" />



</RelativeLayout>
